# gs-utils

./: README.md  pyproject.toml
.github/workflows/: build.yml  main.yml  release.yml
learning/: livy_rate_limit.ipynb
src/gs_utils/: __init__.py  __init__.pyi  _runtime.py  bootstrap.py  exit_nb.py  get_logger.py  get_monthly_data.py  is_automated_run.py  logging_preset.py  nb_out.py  runtime.py  secrets.py  shortcuts.py  unique_ident.py
src/gs_utils/fail_utils/: __init__.py  exit_nb.py
src/gs_utils/fail_utils/logging_utils/: __init__.py  get_logger.py
tests/: test_bootstrap.py
