[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gs-utils"
version = "0.2.8"
description = "Fabric notebook helpers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Gray Sinclair"}]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/gs_utils"]

[tool.hatch.build]
include = [
  "src/gs_utils/py.typed",
  "src/gs_utils/__init__.pyi",
]
