[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gs-utils"
dynamic = ["version"]
description = "Fabric notebook helpers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gray Sinclair" }]
keywords = ["microsoft-fabric", "azure", "notebooks", "keyvault", "helpers"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/GraySinclair/gs-utils"
Issues   = "https://github.com/GraySinclair/gs-utils/issues"

# --- Hatch version from VCS tags ---
[tool.hatch.version]
source = "vcs"

# --- Build targets ---
[tool.hatch.build.targets.wheel]
# src layout
packages = ["src/gs_utils"]

[tool.hatch.build.targets.sdist]
# include in the source dist
include = [
  "/src/gs_utils",
  "/README.md",
  "/LICENSE*",
  "/pyproject.toml",
]

# Ensure non-.py files ship in both sdist and wheel (typing artifacts / stubs)
[tool.hatch.build]
include = [
  "src/gs_utils/py.typed",
  "src/gs_utils/__init__.pyi",
]
# don’t ship tests, notebooks, etc.
exclude = [
  "tests",
  "**/.ipynb_checkpoints",
  "**/.DS_Store",
]
